--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 **/.DS_Store
-./Paper/
+./Paper/**
+.gitignore
+./Paper/Review/**
+./Paper/Model/matching/**
+./Paper/Model/ranking/**
+./Paper/Others/**
 
